# grid-rs

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml
app/src/: fd_util.rs  main.rs  oflag.rs  utility.rs
kernel/drm/: Cargo.toml
kernel/drm/src/: lib.rs
kernel/drm/src/core/: connector.rs  crtc.rs  drm.rs  encoder.rs  fb.rs  mod.rs  mode_info.rs
kernel/drm/src/ffi/: drm_mode_connector.rs  drm_mode_crtc.rs  drm_mode_fb.rs  drm_mode_res.rs  mod.rs
kernel/drm/src/ffi/enums/: mod.rs
kernel/drm/src/ffi/objects/: mod.rs
scripts/: remote_debug.sh
