[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
rand = "*"
time = { version = "*", features = ["local-offset", "formatting", "macros"] }
drm-rs = { path="../kernel/drm-rs" }
gbm-rs = { path="../kernel/gbm-rs" }
color-rs = { path="../color-rs" }
